[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "json"] }
tower-http = { version = "0.4", default-features = false, features = ["cors", "fs"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
time = { version = "0.3", default-features = false, features = ["serde"] }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { version = "1.0" }
clap = { version = "4.2", features = ["derive", "env"] }
url = { version = "2.4", default-features = false }
markdown = "1.0.0-alpha.11"
tracing = "0.1"
anyhow = "1.0"
email_address = "0.2"
regex = "1.9"
reqwest = { version = "0.11", features = ["json"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize>
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-de>
[profile.release.package."*"]
codegen-units = 1
