[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "json", "query"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tower-http = { version = "0.4", default-features = false, features = ["cors", "fs"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
time = { version = "0.3", default-features = false, features = ["serde"] }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { version = "1.0" }
clap = { version = "4.4", features = ["derive", "env"] }
url = { version = "2.4", default-features = false }
markdown = "1.0.0-alpha.14"
tracing = "0.1"
anyhow = "1.0"
email_address = "0.2"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize>
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-de>
[profile.release.package."*"]
codegen-units = 1
