[package]
name = "website-content-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", default-features = false, features = ["macros", "rt-multi-thread", "net", "fs", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query","macros"] }
time = { version = "0.3", default-features = false, features = ["serde", "std", "formatting", "parsing"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "fs"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_yaml_ng = { version = "0.10", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
url = { version = "2.5", features = ["serde"], default-features = false }
strum = {version = "0.27", default-features = false}
strum_macros = {version = "0.27", default-features = false}
serde_json = { version = "1.0" }
markdown = "1.0"
tracing = "0.1"
anyhow = "1.0"
regex = "1.11"
select = "0.6"
asciidork-parser = "0.25"
asciidork-dr-html-backend = "0.25"
ipnet = { version = "2.11", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize>
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-de>
[profile.release.package."*"]
codegen-units = 1
